Update @odh-dashboard/notebooks: fix: remove extra space in dashboard by conditionally hiding sidebar (#1064)
Upstream commit: f8e74d28d2b13ac8cde54941cb0fe51ad98b3373

--- a/packages/notebooks/upstream/workspaces/frontend/src/app/app.css
+++ b/packages/notebooks/upstream/workspaces/frontend/src/app/app.css
@@ -206,3 +206,29 @@ body,
 .pvc-select-group-header--with-divider {
   border-top: 1px solid var(--pf-t--global--border--color--default);
 }
+
+/* In dashboard mode when sidebar is not there, the main container take the full width */
+.pf-v6-c-page.pf-m-no-sidebar {
+  --pf-v6-c-page__main-container--GridArea: main;
+}
+
+/* Increase specificity to beat the media query */
+@media screen and (min-width: 75rem) {
+  .pf-v6-c-page.pf-m-no-sidebar {
+    --pf-v6-c-page__main-container--GridArea: main;
+  }
+}
+
+/* In dashboard mode when sidebar is not there, the main container will not have any margin */
+.mui-theme .pf-v6-c-page.pf-m-no-sidebar .pf-v6-c-page__main-container {
+  overflow: visible;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.mui-theme .pf-v6-c-page.pf-m-no-sidebar .pf-v6-c-page__main {
+  margin-left: 0;
+}
